# runorm

./: README.md  pyproject.toml
runorm/: __init__.py  number_to_word.py  rule_normalizer.py  runorm.py
