[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runorm"
authors = [{name = "Denis Petrov", email = "arduino4b@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

dependencies = [
    "transformers",
    "razdel",
    "torch",
    "sentencepiece"
]

[project.urls]
Home = "https://github.com/Den4ikAI/runorm"
